Browser decrypt works
